# FirtApiTest

./: index.html  main.py  pyproject.toml
app/: calculations.py  database.py  main.py  moex_api.py  schemas.py
templates/: index.html  tikets.html
