[project]
name = "firtapitest"
version = "0.1.0"
description = ""
authors = [
    {name = "TanderDog",email = "dogs2999@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.50.2,<0.51.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
